# cpr

./: .gitignore  Cargo.toml  README.md
crates/cpr/: Cargo.toml
crates/cpr/samples/chunking/: root.rs
crates/cpr/src/: devenv.rs  main.rs
crates/cpr/src/frontend/: file_source_provider.rs  mod.rs  utils.rs
crates/cpr/src/frontend/expand/: iterative.rs  mod.rs  test_expand.rs  test_glue.rs
crates/cpr/src/frontend/grammar/: mod.rs  qmc_conversion.rs  test_constant_fold.rs  test_directive_parser.rs  test_expr_parser.rs  test_lexer.rs  test_truthy.rs
crates/cpr/src/parser/: directive.rs  mod.rs  rangeset.rs  test_chunks.rs  test_expr.rs  test_parse.rs  utils.rs
crates/cpr/src/parser/directive/: mod.rs  test_directive_parser.rs  test_expr_parser.rs  test_lexer.rs
crates/cpr/src/parser/expr/: langc_conversion.rs  mod.rs  qmc_conversion.rs  test_constant_fold.rs  test_expand.rs
crates/cpr/src/parser/strand/: mod.rs  variations.rs
crates/cpr/src/translator/: mod.rs  rg.rs  test_translator.rs  utils.rs
crates/lang-c/: Cargo.toml  grammar.rustpeg
reports/: 2020-03-31.md  2020-04-15.md
samples/chunking/: root.h
samples/cplusplus/: root.h
samples/defineonthefly/: problematic.h  root.h
samples/demo/: Cargo.toml
samples/deps1/: dep.h  root.h
samples/evil-gates/: root.h
samples/fileapi/: root.h
samples/gated-ext/: file.h  file_ext.h  root.h
samples/includeguard/: root.h
samples/kitchensink/: root.h
samples/projectedfslib/: root.h
samples/random/: root.h
samples/rebirth/: dep.h  root.h
samples/wintrust/: root.h
src/: devenv.rs  directive.rs  main.rs  winkits.rs
src/parser/: directive.rs  emit.rs  (+7 more)
(+15 files in other folders)
