[package]
name = "cpr"
version = "0.1.0"
authors = ["Brendan Molloy <brendan@bbqsrc.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hashbrown = "0.7.0"
regex = "1.3.4"
log = "0.4.8"
env_logger = "0.7.1"
peg = "0.6.2"
lang-c = { git = "https://github.com/bbqsrc/lang-c", branch = "feature/msvc" }
lazy_static = "1.4.0"
