[package]
name = "cpr"
version = "0.1.0"
authors = ["Brendan Molloy <brendan@bbqsrc.net>"]
edition = "2018"

[dependencies]
hashbrown = "0.7.0"
regex = "1.3.4"
log = "0.4.8"
env_logger = "0.7.1"
peg = "0.6.2"
lang-c = { path = "../lang-c" }
lazy_static = "1.4.0"
argh = "0.1.3"
matches = "0.1.8"
once_cell = "1.3.1"
thiserror = "1.0.11"
custom_debug_derive = "0.4.0"
quine-mc_cluskey = "0.2.4"
codespan-reporting = "0.9.0"

[target.'cfg(windows)'.dependencies]
winreg = "0.7.0"
